	* generic/tclInterp.c (Tcl_CreateAlias, Tcl_CreateAliasObj,
	  Tcl_CreateSlave, Tcl_GetAlias, Tcl_GetAliasObj, Tcl_GetSlave):
	Updated APIs in the file generic/tclInterp.c according to the
	guidelines of TIP 27.  [Patch 501371]
	***POTENTIAL INCOMPATIBILITY*** 
	Includes a source incompatibility in the targetCmdPtr arguments of
	the Tcl_GetAlias* routines.

	* generic/tclDecls.h: make genstubs

2002-01-15  Don Porter <dgp@users.sourceforge.net>

	* doc/SetErrno.3 (Tcl_ErrnoMsg): Corrected documentation for
	Tcl_ErrnoMsg; it takes an integer argument.  Thanks to Georgios
	Petasis.  [Bug 468183]

        * doc/AddErrInfo.3 (Tcl_PosixError):
        * doc/Eval.3 (Tcl_EvalFile):
        * doc/FileSystem.c (Tcl_FSOpenFileChannel,Tcl_FSOpenFileChannelProc):
        * doc/OpenFileChnl.3 (Tcl_OpenFileChannel):
        * doc/SetErrno.3 (Tcl_ErrnoId,Tcl_ErrnoMsg):
        * doc/Signal.3 (Tcl_SignalId,Tcl_SignalMsg):
        * generic/tcl.decls (Tcl_ErrnoId,TclErrnoMsg,Tcl_EvalFile,
	  Tcl_OpenFileChannel,Tcl_PosixError,Tcl_SignalId,Tcl_SignalMsg,
	  Tcl_FSOpenFileChannel):
	* generic/tcl.h (Tcl_FSOpenFileChannelProc):
	* generic/tclIO.c (FlushChannel):
	* generic/tclIOUtil.c (Tcl_OpenFileChannel,Tcl_EvalFile,TclGetOpenMode,
	  Tcl_PosixError,Tcl_FSOpenFileChannel):
	* generic/tclInt.decls (TclGetOpenMode):
	* generic/tclInt.h (TclOpenFileChannelProc_,TclGetOpenMode,
	  TclpOpenFileChannel):
	* generic/tclPipe.c (TclCleanupChildren):
	* generic/tclPosixStr.c (Tcl_ErrnoId,Tcl_ErrnoMsg,Tcl_SignalId,
	  Tcl_SignalMsg):
	* generic.tclTest.c (PretendTclpOpenFileChannel,
	  TestOpenFileChannelProc1,TestOpenFileChannelProc2,
	  TestOpenFileChannelProc3,TestReportOpenFileChannel):
	* mac/tclMacChan.c (TclpOpenFileChannel):
	* unix/tclUnixChan.c (TclpOpenFileChannel):
	* win/tclWinChan.c (TclpOpenFileChannel): Updated APIs in
	  generic/tclIOUtil.c and generic/tclPosixStr.c according to the
	  guidelines of TIP 27.  Updated callers.  [Patch 499196]

	* generic/tclDecls.h: